django-helm/templates/deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: django-deployment
  labels:
    app: django
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: django
        tier: frontend
    spec:
      containers:
      - image: raghavgade/ems:latest
        name: django
        ports:
        - containerPort: 8000
          name: django
