django-helm/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-web-svc
  labels:
    app: django
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
      app: django
